[tool.poetry]
name = "fast-poibin"
version = "0.2.6"
description = "Package for computing PMF and CDF of Poisson binomial distribution."
authors = ["Hugo Sansaqua <privet.kitty99@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/privet-kitty/fast-poibin"
documentation = "https://privet-kitty.github.io/fast-poibin/"
packages = [{include = "fast_poibin"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
numba = "^0.56.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^5.0.4"
black = "^22.12.0"
isort = "^5.11.4"
poethepoet = "^0.17.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = {extras = ["toml"], version = "^7.0.3"}
pytest-mock = "^3.10.0"
sphinx-rtd-theme = "1.2.0rc2"
Sphinx = "^6.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.9"
show_column_numbers = true

[tool.black]
line-length = 100
exclude = '''
(
    .venv
    | .mypy_cache
    | .pytest_cache
    | .tox
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true
ensure_newline_before_comments = true
force_grid_wrap = 0

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.poe.tasks]
lint = "flake8 fast_poibin tests"
test = "pytest --cov=fast_poibin"
type-check = "mypy fast_poibin tests"
docs = "sphinx-build docs docs/_build"
